force-app/main/default/objects/Medical_Insurence__c/fields/Insurance_value__c.field-meta.xml
<CustomField>
    <fullName>Insurance_value__c</fullName>
    <label>Insurance value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>