force-app/main/default/objects/Medical_Insurence__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>Beginning of insurence</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>